--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,6 +165,73 @@ services:
   #   networks:
   #     - elk
 
+  prometheus:
+    image: prom/prometheus:v3.3.1
+    container_name: prometheus
+    user: ":"
+    restart: unless-stopped
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus/prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--web.enable-lifecycle'
+    ports:
+      - 9090:9090
+    networks:
+      - elk
+
+  grafana:
+    image: grafana/grafana:12.0.0
+    container_name: grafana
+    restart: unless-stopped
+    user: ":"
+    ports:
+      - 3000:3000
+    environment:
+      GF_SECURITY_ADMIN_USER: ${GF_ADMIN_USERNAME}
+      GF_SECURITY_ADMIN_PASSWORD: ${GF_ADMIN_PASSWORD}
+      # - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - ./grafana/grafana_data:/var/lib/grafana
+    networks:
+      - elk
+    depends_on:
+      - prometheus
+  # jmeter:
+  #   image: justb4/jmeter:5.6.3
+  #   container_name: jmeter
+  #   volumes:
+  #     - ./jmeter/test-plans:/test-plans
+  #     - ./jmeter/results:/results
+  #   environment:
+  #     - TZ=UTC+7
+  #   networks:
+  #     - elk
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: react-frontend
+    restart: unless-stopped
+    ports:
+      - 80:80
+    volumes:
+      - ./frontend:/app  # For development only (remove in production)
+      - /app/node_modules # Don't mount node_modules
+    environment:
+      - NODE_ENV=development  # Change to production for production builds
+      - VITE_API_URL=http://localhost:8080  # Backend API URL
+      - VITE_KIBANA_URL=http://localhost:5601  # Kibana URL
+      - VITE_GRAFANA_URL=http://localhost:3000  # Grafana URL
+    depends_on:
+      # - backend  # Uncomment when backend is enabled
+      - mongodb
+    networks:
+      - elk
 networks:
   elk:
     driver: bridge
