Add Chart.js and Fix Mongodb and elasticsearch package conflict userRepository

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.data.mongodb.socket-timeout=10000
 # Elasticsearch Connection (already in your docker-compose)
 spring.elasticsearch.uris=http://localhost:9200
 spring.elasticsearch.username=elastic
-spring.elasticsearch.password=${ELASTIC_PASSWORD}
+spring.elasticsearch.password=superSecretPassword!123
 
 # Logging
 logging.level.org.springframework.data.mongodb=INFO
