--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -211,27 +211,27 @@ services:
   #     - TZ=UTC+7
   #   networks:
   #     - elk
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: react-frontend
-    restart: unless-stopped
-    ports:
-      - 80:80
-    volumes:
-      - ./frontend:/app  # For development only (remove in production)
-      - /app/node_modules # Don't mount node_modules
-    environment:
-      - NODE_ENV=development  # Change to production for production builds
-      - VITE_API_URL=http://localhost:8080  # Backend API URL
-      - VITE_KIBANA_URL=http://localhost:5601  # Kibana URL
-      - VITE_GRAFANA_URL=http://localhost:3000  # Grafana URL
-    depends_on:
-      # - backend  # Uncomment when backend is enabled
-      - mongodb
-    networks:
-      - elk
+  # frontend:
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: Dockerfile
+  #   container_name: react-frontend
+  #   restart: unless-stopped
+  #   ports:
+  #     - 80:80
+  #   volumes:
+  #     - ./frontend:/app  # For development only (remove in production)
+  #     - /app/node_modules # Don't mount node_modules
+  #   environment:
+  #     - NODE_ENV=development  # Change to production for production builds
+  #     - VITE_API_URL=http://localhost:8080  # Backend API URL
+  #     - VITE_KIBANA_URL=http://localhost:5601  # Kibana URL
+  #     - VITE_GRAFANA_URL=http://localhost:3000  # Grafana URL
+  #   depends_on:
+  #     # - backend  # Uncomment when backend is enabled
+  #     - mongodb
+  #   networks:
+  #     - elk
 networks:
   elk:
     driver: bridge
