--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "5.6.1",
     "antd": "5.25.1",
     "axios": "1.9.0",
+    "chart.js": "4.4.9",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
