fix error prometheus cannot connect to spring boot /actuator/prometheus

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,9 +20,13 @@ spring.elasticsearch.password=superSecretPassword!123
 logging.level.org.springframework.data.mongodb=INFO
 logging.level.org.springframework.data.elasticsearch=INFO
 
-# Actuaror
-management.endpoints.web.exposure.include=*
+# Actuator
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
 management.endpoint.health.show-details=always
+
+# Prometheus specific settings
+management.metrics.export.prometheus.enabled=true
+management.endpoint.prometheus.enabled=true
 
 # JWT
 # expiration=100days
