--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,13 +151,25 @@ services:
   #   ports:
   #     - 8080:8080
   #   environment:
-  #     SPRING_DATA_MONGODB_URI: mongodb://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@mongodb:27017/load-testing?authSource=admin
-  #     SPRING_DATA_MONGODB_DATABASE: load-testing
-  #     ELASTICSEARCH_HOST: elasticsearch
-  #     ELASTICSEARCH_PORT: 9200
-  #     ELASTICSEARCH_USERNAME: elastic
-  #     ELASTICSEARCH_PASSWORD: ${ELASTIC_PASSWORD}
-  #     LOGGING_LEVEL_ROOT: INFO
+  #     SPRING_APPLICATION_NAME: load-testing
+  #     SPRING_DATA_MONGODB_URI: mongodb://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@mongodb:27017/load_testing?authSource=admin
+  #     SPRING_DATA_MONGODB_DATABASE: load_testing
+  #     SPRING_DATA_MONGODB_CONNECTION_POOL_MAX_SIZE: 100
+  #     SPRING_DATA_MONGODB_CONNECTION_POOL_MIN_SIZE: 5
+  #     SPRING_DATA_MONGODB_CONNECT_TIMEOUT: 5000
+  #     SPRING_DATA_MONGODB_SOCKET_TIMEOUT: 10000
+  #     SPRING_ELASTICSEARCH_URIS: http://elasticsearch:9200
+  #     SPRING_ELASTICSEARCH_USERNAME: elastic
+  #     SPRING_ELASTICSEARCH_PASSWORD: ${ELASTIC_PASSWORD}
+  #     LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_DATA_MONGODB: INFO
+  #     LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_DATA_ELASTICSEARCH: INFO
+  #     MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: health,info,prometheus,metrics
+  #     MANAGEMENT_ENDPOINT_HEALTH_SHOW_DETAILS: always
+  #     MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED: true
+  #     MANAGEMENT_ENDPOINT_PROMETHEUS_ENABLED: true
+  #     JWT_BASE64_SECRET: ${JWT_BASE64_SECRET}
+  #     JWT_ACCESS_TOKEN_VALIDITY_IN_SECONDS: 8640000
+  #     JWT_REFRESH_TOKEN_VALIDITY_IN_SECONDS: 8640000
   #     SPRING_PROFILES_ACTIVE: docker
   #   depends_on:
   #     - mongodb
@@ -181,6 +193,8 @@ services:
       - '--web.enable-lifecycle'
     ports:
       - 9090:9090
+    extra_hosts:
+    - host.docker.internal:host-gateway
     networks:
       - elk
 
