--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -5,8 +5,8 @@ global:
 scrape_configs:
     - job_name: 'prometheus'
       static_configs:
-          - targets: ['host.docker.internal:9090']
+          - targets: ['prometheus:9090']
     - job_name: 'spring-boot'
       metrics_path: '/actuator/prometheus'
       static_configs:
-      - targets: ['backend:8080']
+          - targets: ['host.docker.internal:8080']
