--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@ant-design/icons": "5.6.1",
     "antd": "5.25.1",
+    "async-mutex": "0.5.0",
     "axios": "1.9.0",
     "chart.js": "4.4.9",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-router-dom": "7.6.0",
+    "sass": "1.89.0"
   },
   "devDependencies": {
     "@eslint/js": "9.25.0",
