Get the Record and statistical result of JMeter simple scenario

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -134,6 +134,24 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/us.abstracta.jmeter/jmeter-java-dsl -->
+		<dependency>
+			<groupId>us.abstracta.jmeter</groupId>
+			<artifactId>jmeter-java-dsl</artifactId>
+			<version>1.29.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.14.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.19.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
