--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "5.6.1",
+    "@ant-design/pro-components": "2.8.7",
     "@ant-design/v5-patch-for-react-19": "1.0.3",
     "antd": "5.25.1",
     "async-mutex": "0.5.0",
