--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -36,3 +36,5 @@ jwt.refresh-token-validity-in-seconds=8640000
 
 logstash.host=localhost:50000
 logger.name	hello
+
+spring.data.web.pageable.one-indexed-parameters=true
