--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -38,3 +38,7 @@ logstash.host=localhost:50000
 logger.name	hello
 
 spring.data.web.pageable.one-indexed-parameters=true
+jmeter.test-plans-directory=/jmeter/test-plans
+jmeter.results-directory=/jmeter/results
+jmeter.jtl-directory=/jmeter/jtls
+jmeter.jmx-directory=/jmeter/jmx
