--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "async-mutex": "0.5.0",
     "axios": "1.9.0",
     "chart.js": "4.4.9",
+    "dayjs": "1.11.13",
     "react": "19.1.0",
     "react-chartjs-2": "5.3.0",
     "react-dom": "19.1.0",
