Add Logging and AOP

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=load-testing
+logging.level.com.vn.ptit.duongvct=INFO
 # MongoDB Connection
 spring.data.mongodb.uri=mongodb://duongvct:superSecretPassword!123@localhost:27017/load_testing?authSource=admin
 spring.data.mongodb.database=load_testing
@@ -21,7 +22,7 @@ logging.level.org.springframework.data.mongodb=INFO
 logging.level.org.springframework.data.elasticsearch=INFO
 
 # Actuator
-management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoints.web.exposure.include=health,info,prometheus,metrics, loggers
 management.endpoint.health.show-details=always
 
 # Prometheus specific settings
