--- a/docker-elk/logstash/pipeline/logstash.conf
+++ b/docker-elk/logstash/pipeline/logstash.conf
@@ -5,7 +5,7 @@ input {
 
 	tcp {
 		port => 50000
-		codec => json
+		codec => json_lines
 	}
 }
 
@@ -16,6 +16,6 @@ output {
 		hosts => "elasticsearch:9200"
 		user => "logstash_internal"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
-		index => "springboot-%{app}"
+		index => "springboot"
 	}
 }
