Update Edit test plan schedule

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=load-testing
-logging.level.com.vn.ptit.duongvct=INFO
+logging.level.com.vn.ptit.duongvct=DEBUG
 # MongoDB Connection
 spring.data.mongodb.uri=mongodb://duongvct:superSecretPassword!123@localhost:27017/load_testing?authSource=admin
 spring.data.mongodb.database=load_testing
